# audio_verifier

./: .clangd  .gitignore  CMakeLists.txt  Makefile  README.md  analyze_wav.c  analyze_wav.cpp  generator.c  generator.d  generator.h  main.c  main.d
src/: analyze_wav.cpp  generator.cpp  main.c  main.cpp
src/include/: getopt.h
